--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="topo">
       <img id="logo" src="barco1.png" alt = "Logo da empresa">
       <div id="nome">
-        <h1>Luxo</h1>
+        <h1>Lux</h1>
         <h2>Aluguel de iates</h2>
       </div>
     </div>
