--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <div id="topo">
       <img id="logo" src="barco1.png" alt = "Logo da empresa">
       <div id="nome">
-        <h1>Lux</h1>
-        <h2>Aluguel de iates</h2>
+        <h1>Luxo</h1>
+        <h2>Alugueliiiiii de iates</h2>
       </div>
     </div>
     <ul>
