--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <div id="topo">
-      <img id="logo" src="barco1.png" alt = "Logo da empresa">
+      <img id="logo" src= "barco1.png" alt = "Logo da empresa">
       <div id="nome">
         <h1>Luxo</h1>
-        <h2>Alugueliiiiii de iates</h2>
+        <h2>Aluguel de iates</h2>
       </div>
     </div>
     <ul>
